<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/prev"
        android:title="@string/prev"
        android:icon="@drawable/ic_skip_previous_black_24dp"/>

    <item
        android:id="@+id/next"
        android:title="@string/next"
        android:icon="@drawable/ic_skip_next_black_24dp"/>

    <item
        android:id="@+id/favorite"
        android:title="Favorite Match"
        android:icon="@drawable/ic_favorite_24dp"/>
</menu>